monitoring/pushgateway-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
  namespace: monitoring
  labels:
    k8s-app: pushgateway
spec:
  selector:
    matchLabels:
      k8s-app: pushgateway
  template:
    metadata:
      labels:
        k8s-app: pushgateway
    spec:
      securityContext:
        runAsUser: 1006
        runAsGroup: 1006
      containers:
      - name: pushgateway
        image: prom/pushgateway
        imagePullPolicy: Always
        ports:
          - name: pushgateway
            containerPort: 9091
        readinessProbe:
          tcpSocket:
            port: pushgateway
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: pushgateway
          initialDelaySeconds: 15
          periodSeconds: 30
