monitoring/blackbox-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: blackbox-exporter
  name: blackbox-exporter
  namespace: monitoring
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9115
  selector:
    k8s-app: blackbox-exporter
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
