monitoring/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: grafana
  name: grafana
  namespace: monitoring
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    k8s-app: grafana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
