monitoring/hs110-plug-57-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: hs110-plug-57
  name: hs110-plug-57
  namespace: monitoring
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9498
  selector:
    k8s-app: hs110-plug-57
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
