monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: prometheus
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    k8s-app: prometheus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
