monitoring/pushgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: pushgateway
  name: pushgateway
  namespace: monitoring
spec:
  ports:
  - port: 9091
    nodePort: 30091
    protocol: TCP
    targetPort: 9091
  selector:
    k8s-app: pushgateway
  type: NodePort
