monitoring/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
  tls:
  - hosts:
    - grafana
    secretName: grafana-ingress-cert
status:
  loadBalancer: {}
