monitoring/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: prometheus
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 80
  tls:
  - hosts:
    - prometheus
    secretName: prometheus-ingress-cert
status:
  loadBalancer: {}
